--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,6 +6,7 @@ timestamp_fmt: "%Y%m%d_%H%M%S"
 project_dirs:
   rawdata_dir: "dataset/raw"
   processed_data_dir: "dataset/processed"
+  test_data_dir: "dataset/test"
 input_files:
 analysis_params:
 down_sample_inputs:
