--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,6 +7,14 @@ project_dirs:
   rawdata_dir: "dataset/raw"
   processed_data_dir: "dataset/processed"
   test_data_dir: "dataset/test"
+raw_files:
+  rawcount_file: "dataset/raw/RawCounts_noY_CPM1_head_hsctrl_onlyGEMMAsamples_Mar21.21.txt"
+  rawmeta_file: "dataset/raw/Info_RawCounts_CPM1_head_hsctrl_Jul9.20.txt"
+  voom_surrogate_files:
+    - "dataset/raw/VOOM_surrogates/TMM_Voom_sv1_10.txt"
+    - "dataset/raw/VOOM_surrogates/TMM_Voom_sv2_10.txt"
+    - "dataset/raw/VOOM_surrogates/TMM_Voom_sv3_10.txt"
+    - "dataset/raw/VOOM_surrogates/TMM_Voom_sv4_10.txt"
 input_files:
   subset_data:
     - file_A.csv
