--- a/config/config.yaml
+++ b/config/config.yaml
@@ -21,10 +21,12 @@ raw_files:
     - "dataset/raw/VST_surrogates/VST_sv2_10.txt"
     - "dataset/raw/VST_surrogates/VST_sv3_10.txt"
 processed_files:
-  voom_ctrl_file: "dataset/processed/VOOM/vomdataN.txt"
-  voom_hs_file: "dataset/processed/VOOM/vomdataHS.txt"
-  vst_ctrl_file: "dataset/processed/VST/VSTdataN.txt"
-  vst_hs_file: "dataset/processed/VST/VSTdataHS.txt"
+  voom_processed_files:
+    - "dataset/processed/VOOM/voomdataN.txt"
+    - "dataset/processed/VOOM/voomdataHS.txt"
+  vst_processed_files:
+    - "dataset/processed/VST/VSTdataN.txt"
+    - "dataset/processed/VST/VSTdataHS.txt"
 input_files:
   subset_data:
     - file_A.csv
