--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,6 +15,7 @@ output_dirs:
   reports_dir: "results/reports"
   wgcna_dir: "results/WGCNA"
   GWENA_dir: "results/GWENA"
+  spearman_dir: "results/spearman_correlation"
 raw_files:
   rawcount_file: "dataset/raw/RawCounts_noY_CPM1_head_hsctrl_onlyGEMMAsamples_Mar21.21.txt"
   rawmeta_file: "dataset/raw/Info_RawCounts_CPM1_head_hsctrl_Jul9.20.txt"
