updated network features script

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -39,3 +39,7 @@ processed_files:
 spearman_correlation_files:
   permutation_files:
     - "results/spearman_correlation/permutation_test"
+network_feature_files:
+  soft_threshold_files:
+    - "results/network_features/soft_threshold/signed/signed_soft_threshold_adjacency_matrix.csv"
+    - "results/network_features/soft_threshold/unsigned/unsigned_soft_thresholded_adjacency_matrix.csv"
