gene-level metrics script updates

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ archives
 # gthornes
 results/network_features/features_calc/
 results/network_features/soft_threshold/
+results/network_features/gene_metrics/
 
 # files
 src/test.r
