fixed perm script

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ results/network_features/features_calc/
 results/network_features/soft_threshold/
 results/network_features/gene_metrics/
 results/spearman_correlation/spearman_matrices/
-results/network_features/.nfs00000009018d5a2d0101aabc
+results/spearman_correlation/perm/
 
 # files
 src/test.r
