--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ logs
 results/network_features/
 results/spearman_correlation/spearman_matrices/
 results/spearman_correlation/perm/
+results/analysis
 
 # files
 src/test.r
