igraph network script created, enrichment plots improved

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ results/network_features/
 results/spearman_correlation/spearman_matrices/
 results/spearman_correlation/perm/
 results/analysis
+Rplots.pdf
 
 # files
 src/test.r
