--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ src/test.r
 # yu-tao
 results/spearman_correlation/shuffle/
 results/spearman_correlation/permutation_test/
+Rplots.pdf
+*.Rout
+.Rhistory
+.RData
