--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,7 @@ archives
 logs
 
 # gthornes
-results/network_features/
-results/spearman_correlation/spearman_matrices/
-results/spearman_correlation/perm/
-results/analysis
+results
 Rplots.pdf
 dataset/
 
