--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ dataset/raw/logCPM_HS_Dros.csv
 dataset/test/logCPM_ct_dros_subset.csv
 dataset/test/logCPM_hs_dros_subset.csv
 .snakemake/iocache/latest.pkl
+dag.pdf
+dag.svg
+.snakemake/log
