reorganize files and name scripts with order

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .Rproj.user
 *.Rout
 # project folds
+src/test  # for test data or scripts without synchronization
 dataset/
 manuscript/
 planning/
