--- a/config/config.yaml
+++ b/config/config.yaml
@@ -35,12 +35,15 @@ raw_files:
     - "dataset/raw/VST_surrogates/VST_sv2_10.txt"
     - "dataset/raw/VST_surrogates/VST_sv3_10.txt"
 processed_files:
-  voom_processed_files:
+  voom_files:
     - "dataset/processed/VOOM/voomdataCtrl.txt"
     - "dataset/processed/VOOM/voomdataHS.txt"
-  vst_processed_files:
-    - "dataset/processed/VST/VSTdataCtrl.txt"
-    - "dataset/processed/VST/VSTdataHS.txt"
+  vst_files:
+    - "dataset/subset/VSTdataCtrl_subset.txt"
+    - "dataset/subset/VSTdataHS_subset.txt"
+test_files:
+  vst_files:
+    
 
 spearman_correlation_files:
   permutation_files:
