ignore test scripts

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,14 @@
 .Rproj.user
 *.Rout
 # project folds
-src/test/  # for test data or scripts without synchronization
 dataset/
 manuscript/
 planning/
 results/
 archives
 logs
+## for test data or scripts without synchronization
+src/test/
 
 # gthornes
 Rplots.pdf
